fix(hero): change spacing between elements

--- a/practice-two/src/styles/components/text.css
+++ b/practice-two/src/styles/components/text.css
@@ -31,7 +31,6 @@ li {
 .text-sm {
   font-size: 14px;
   line-height: 34px;
-  letter-spacing: 0.2px;
 }
 
 .text-md {
